# aiogram

./: .apiversion  .coveragerc  .deepsource.toml  .editorconfig  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  1455.feature.rst  1724.bugfix.rst  AGENTS.md  CHANGES.rst  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.rst  Justfile  LICENSE  Main.ru  Makefile  README.md  README.rst  TEST.md  blocks.py  bot telegram  build.py  chatbot  codecov.yaml  dev_requirements.txt  environment.yml  experiment.py  handlers.py  issue1842.py  message.py  mkdocs.yml  mypy.ini  pyproject.toml  (+6 more)
.butcher/enums/: BotCommandScopeType.yml  BotSubscriptionUpdatedState.yml  ButtonStyle.yml  ChatActions.yml  ChatBoostSourceType.yml  ChatMemberStatus.yml  ChatType.yml  ContentType.yml  Currency.yml  DiceEmoji.yml  EncryptedPassportElement.yml  InlineQueryResultType.yml  InputMediaType.yml  InputPaidMediaType.yml  InputProfileType.yml  InputRichBlockType.yml  InputStoryContentPhotoType.yml  KeyboardButtonPollTypeType.yml  MaskPositionPoint.yml  MenuButtonType.yml  MessageEntityType.yml  MessageOriginType.yml  OwnedGiftType.yml  PaidMediaType.yml  ParseMode.yml  PassportElementErrorType.yml  PollType.yml  ReactionTypeType.yml  RevenueWithdrawalStateType.yml  RichBlockType.yml  RichTextType.yml  StickerFormat.yml  StickerType.yml  StoryAreaTypeType.yml  TransactionPartnerType.yml  TransactionPartnerUserTransactionType.yml  UpdateType.yml  chat_type.yml  content_type.yml  dice.yml  (+2 more)
.butcher/schema/: schema.json
.claude/commands/: aiogram-api-changelog.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yaml  bug_report.md  config.yml  feature.yaml
.github/workflows/: autoupdate-license.yaml  deploy.yml  docs.yml  label_pr.yaml  pre-commit.yml  pull_request_changelog.yml  pypi-release.yml  pypy-tests.yml  release.yml  testpypi.yml  tests.yml  tox.yml
.serena/: project.yml
.serena/memories/: code_style.md  codebase_structure.md  codegen_workflow.md  project_overview.md  suggested_commands.md  task_completion.md  testing_patterns.md
CHANGES/: .template.rst.jinja2  1006.bugfix  1013.bugfix.rst  1014.misc.rst  1017.doc  1017.doc.rst  1018.feature.rst  1029.doc.rst  1030.feature.rst  1032.feature.rst  1044.misc.rst  1047.bugfix.rst  1049.feature.rst  1058.feature.rst  1060.doc.rst  1064.bugfix.rst  1066.misc.rst  1069.misc.rst  1088.feature.rst  1091.feature.rst  1095.misc.rst  1099.doc.rst  1106.bugfix.rst  1112.misc.rst  1114.misc.rst  1117.feature.rst  1120.misc.rst  1124.misc.rst  1133.doc.rst  1134.doc.rst  1139.misc.rst  1142.misc.rst  1143.docs.rst  1144.misc.rst  1146.bugfix.rst  1147.feature  1147.feature.rst  1155.bugfix.rst  1160.bugfix  1160.bugfix.rst  (+342 more)
aiogram/: 1057.feature.rst  __init__.py  __main__.py  __meta__.py  api.py  bot.py  custom_types.py  default_annotations.py  exceptions.py  loggers.py  message.py  tracer.py
aiogram/_telegram/: types.py
aiogram/bot/: __init__.py  api.py  base.py  bot.py
aiogram/client/: bot.py  context_controller.py  default.py  errors_middleware.py  form.py  limiter.py  telegram.py
aiogram/dispatcher/: __init__.py  _typedef.py  ctx.py  dispatcher.py  filters.py  flags.py  handler.py  middlewares.py  requirement.py  router.py  state.py  storage.py  throttle.py  webhook.py
aiogram/enums/: __init__.py  bot_command_scope_type.py  bot_subscription_updated_state.py  button_style.py  chat_type.py  content_type.py  currency.py  dice_emoji.py  inline_query_result_type.py  input_media_type.py  input_paid_media_type.py  input_rich_block_type.py  message_entity_type.py  paid_media_type.py  reaction_type_type.py  transaction_partner_type.py  update_type.py
aiogram/filters/: __init__.py  base.py  callback_data.py  chat_member_updated.py  command.py  content_types.py  exception.py  logic.py  magic_data.py  media_group.py  state.py  text.py
aiogram/fsm/: __init__.py  context.py  middleware.py  scene.py  state.py  strategy.py
aiogram/handler/: callback_query.py  chat_member.py  chosen_inline_result.py  error.py  inline_query.py  message.py  poll.py  pre_checkout_query.py  shipping_query.py
aiogram/handlers/: base.py  callback_query.py  message.py  poll.py
aiogram/methods/: __init__.py  add_sticker_to_set.py  ban_chat_member.py  (+176 more)
docs/: Makefile  _package_version.md  changelog.rst  conf.py  contributing.rst  index.md  index.rst  install.md  install.rst  migration_2_to_3.rst  reports.md  todo.md
docs2/: Makefile  conf.py  index.rst  install.rst  requirements.txt
examples/: admin_filter_example.py  advanced_executor_example.py  adwanced_executor_example.py  broadcast_example.py  callback_data_factory.py  callback_data_factory_simple.py  chat_type_filter.py  chat_types_filter.py  check_user_language.py  command_typed_args.py  context_addition_from_filter.py  custom_filter_example.py  custom_route.py  deprecated_steps_and_downloading_file.py  echo_bot.py  echo_bot_webhook.py  echo_bot_webhook_ssl.py  echo_class_based_bot_asyncio.py  echo_fastapi_cbv_based_bot.py  error_handling.py  example_context_middleware.py  finite_state_machine.py  finite_state_machine_example.py  finite_state_machine_example_2.py  finite_state_machine_signals.py  i18n.py  i18n_example.py  id-filter-example.py  id_filter_example.py  inline_bot.py  inline_buttons_pagination.py  inline_keyboard_example.py  local_server.py  media_group.py  middleware_and_antiflood.py  multibot.py  own_filter.py  payments.py  proxy_and_emojize.py  quiz_scene.py  (+20 more)
generator/: __main__.py  cli.py  consts.py  generator.py  normalizers.py  parser.py  structures.py
newsfragments/: .docs.rst  1727.docs.rst
requirements/: base.txt  docs.txt
scripts/: bump_version.py  bump_versions.py
tests/: __init__.py  conftest.py  dataset.py  deprecated.py  docker-compose.yml  mocked_bot.py  test_bot.py  test_chat.py  test_dispatcher.py  test_document.py  test_filters.py  test_game.py  test_message.py  test_nothing.py  test_photo.py  test_states_group.py  test_states_group_navigation.py  test_token.py  test_tracing.py  utils.py
(+4592 files in other folders)
